upgrade to django 3.2

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -1,6 +1,6 @@
 {% extends 'admin/base.html' %}
 {% load i18n %}
-{% load admin_static %}{% load suit_tags %}<!DOCTYPE html>
+{% load static %}{% load suit_tags %}<!DOCTYPE html>
 
 
 {% block extrastyle %}
