--- a/templates/sitetree/topbar_navmenu/navmenu.html
+++ b/templates/sitetree/topbar_navmenu/navmenu.html
@@ -1,4 +1,4 @@
-{% load i18n staticfiles sitetree %}
+{% load i18n static sitetree %}
 
 <div ng-controller="TopbarMenuController" ng-cloak>
   <top-bar is-hover="false">
