--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,4 +1,4 @@
-{% extends "admin/base_site.html" %}{% load i18n request_admin staticfiles %}
+{% extends "admin/base_site.html" %}{% load i18n request_admin static %}
 {% block extrahead %}
 {{ block.super }}
 <script type="text/javascript" src="{% static "request/js/jquery-1.4.2.min.js" %}"></script>
