--- a/plumbing/templates/admin/plumbing_widget.html
+++ b/plumbing/templates/admin/plumbing_widget.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{#TODO: FIX THIS!!!!#}
 <div id="plumbing" class="plumbing" ng-app="plumbing" ng-controller="graph"
      ng-mousedown="startScrolling($event)"
      ng-mouseup="stopScrolling()"
