--- a/content/templates/admin/text_content_widget.html
+++ b/content/templates/admin/text_content_widget.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{# TODO: CHECK IF NEEDS FIX!!#}
 <div id="content" class="content" ng-app="content" ng-controller="contentArray">
 
     <textarea id="id_data" name="data" class="data ng-hide">{% verbatim %}{{ data }}{% endverbatim %}</textarea>
