add sentry to frontend

--- a/templates/portal.html
+++ b/templates/portal.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home</title>
+    {% include 'sentry.html' %}
     {% compress css %}
     {% if lang_dir %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
