--- a/templates/sessionnew.html
+++ b/templates/sessionnew.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Mind Tools</title>
+{% include 'sentry.html' %}
     {% compress css %}
     {% if lang_dir %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
