--- a/templates/therapist.html
+++ b/templates/therapist.html
@@ -14,7 +14,7 @@
     <meta name="author" content="">
 
     <title>Mind Tools</title>
-
+    {% include 'sentry.html' %}
     <!-- Bootstrap core CSS -->
     {% compress css %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
