--- a/users/templates/email/login_link.html
+++ b/users/templates/email/login_link.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8"/>
     <style>
     </style>
+    {% include 'sentry.html' %}
 </head>
 <body>
 <table cellspacing="0" cellpadding="0" border="0">
