add message line to login screen

--- a/staticfiles/css/main-mobile.css
+++ b/staticfiles/css/main-mobile.css
@@ -1166,6 +1166,7 @@ and (-webkit-min-device-pixel-ratio: 1.5) {
         color: #1B418A;
         border: 1px solid #FFFFFF;
         text-decoration-line: none;
+        text-align: center;
     }
 
     .login-inner-box-text {
