--- a/users/templates/login_lock.html
+++ b/users/templates/login_lock.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="page text-center" dir="auto">
         <h1>{% trans 'Account Locked' %}</h1>
-        <p class="text-justify">{% trans 'Due to multiple login attempts, and to protect your privacy, this account has been locked.' %}
+        <p>{% trans 'Due to multiple login attempts, and to protect your privacy, this account has been locked.' %}
             <br/> {% trans 'To log in, please reset your password.' %}</p>
         <br/><br/>
         <a href="{% url 'password_reset' %}">{% trans 'Click here to reset your password' %}</a>
