--- a/system/static/admin/css/program.css
+++ b/system/static/admin/css/program.css
@@ -1,3 +1,3 @@
-#content-main > .object-tools > li > a.export_link {
-    display: none;
+#content-main > .object-tools > li > a.export_link, #toolbar > .object-tools > li > a.addlink, select[name="action"] option[value="export_admin_action"] {
+    display: none !important;
 }
